# phoenix-waterfall

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  deploy-release.ps1  phoenix-build.json  test-build.ps1  test-ci-build.cmd  test-ci-build.ps1  test-ci-build.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml
docs/: TELEMETRY.md
include/: ui_core.h  ui_widgets.h  version.h
src/: ui_core.c  ui_widgets.c  waterfall.c
